[tool.poetry]
name = "e2emlproject"
version = "0.0.1"
description = "Your project description here"
authors = ["ben <bengisla123@gmail.com>"]
readme = "README.md"
packages = [{ include = "e2emlproject" }]

[tool.poetry.dependencies]
python = ">=3.7"
pandas = "*"
numpy = "*"
seaborn = "*"
scikit-learn = "*"
catboost = "*"
xgboost = "*"
dill = "*"
joblib = "*"
flask = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
